v2 Adjusted pug + html modules

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,3 +1,6 @@
+include parts/head.html
+include parts/index/index-link.html
 include parts/header.html
 include parts/index/index.html
 include parts/footer.html
+include parts/index/index-src.html
